# babyrite

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  labels.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build.yml  cargo.yml  release.yml  test.yml
src/: main.rs  utils.rs
src/api/: client.rs
src/event/: handler.rs  ready.rs
src/event/message/: handler.rs
