# The Manifest Format: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "babyrite"
version = "0.1.0"
edition = "2021"
authors = ["m2en <me@m2en.dev>"]
readme = "README.md"
repository = "https://github.com/m2en/babyrite"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
dotenvy = { version = "0.15.6" }

[dependencies.serenity]
version = "0.11.5"
optional = true
default-features = false
features = ["rustls_backend", "client", "gateway", "model", "cache"]
