# The Manifest Format: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "babyrite"
version = "0.1.0"
edition = "2021"
authors = ["m2en <me@m2en.dev>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/m2en/babyrite"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
dotenvy = { version = "0.15.6" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
regex = { version = "1.7.1" }
anyhow = { version = "1.0.69" }

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["rustls_backend", "client", "gateway", "model", "cache"]
